--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 }
 
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
 
 
 .header {
@@ -76,10 +72,10 @@ body {
 
 
 .side {
-  -ms-flex: 30%; 
-  flex: 30%;
+  -ms-flex: 10%; 
+  flex: 5%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 40px;
 }
 
 
@@ -137,28 +133,26 @@ body {
   <a href="#" class="active">Home</a>
   <a href="#">Meet The Artists</a>
   <a href="#">Shop</a>
-  <a href="#">Contact Us</a>
-	
+	<a href="#" class="right">Contact Us</a>
 
 </div>
 
 <div class="row">
   <div class="side">
-    <h2>What's New</h2>
+    <h2>What's New ☺</h2>
     <p>See what's new in the shop!</p>
-    <div class="fakeimg" style="width:200px;height:200px;">Image</div><br>
-    <div class="fakeimg" style="width:200px;height:200px;">Image</div><br>
-    <div class="fakeimg" style="width:200px;height:200px;">Image</div>
+    <div class="fakeimg" style="width:300px;height:200px;">
+	  </div>
+	  <br>
+  
   </div>
   <div class="main">
     <h1 class="title">COMING SOON...</h1>
     <br>
     
-    <div class="fakeimg" style="height:300px;">Image</div>
+    <div class="fakeimg" style="height:400px;">Image</div>
     <p>The Friendly Dead Co. is excited to announce that come October all of your favorite designs will be availble to be printed on a vast verity of goods through our recent partnership with -insert print on demand service here-! </p>
-    <div class="fakeimg" style="height:150px;">Image</div>
-    <p>The Friendly Dead Co. Would like to thank all of you that enetered the raffle this month and will be announcing Augusts raffle prize winner come October 1st, Be sure to check out our Instagram an to find out who won and how to enter in Octobers raffle!</p>
-    
+
    
   </div>
 </div>
