--- a/index.html
+++ b/index.html
@@ -142,6 +142,28 @@
     <h2>What's New ☺</h2>
     <p>See what's new in the shop!</p>
     <div class="fakeimg" style="width:300px;height:200px;">
+		
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		
+		<h2>Sign Up For Updates</h2>
+
+<form action="/action_page.php">
+  <label for="fname">Full Name:</label><br>
+  <input type="text" id="fname" name="fname" value="Name"><br>
+  <label for="lname">Email:</label><br>
+  <input type="text" id="lname" name="lname" value="email@gmail.com"><br><br>
+  <input type="submit" value="Submit">
+</form> 
+		
 	  </div>
 	  <br>
   
@@ -153,9 +175,13 @@
     <div class="fakeimg" style="height:400px;">Image</div>
     <p>The Friendly Dead Co. is excited to announce that come October all of your favorite designs will be availble to be printed on a vast verity of goods through our recent partnership with -insert print on demand service here-! </p>
 
+	  <iframe width="420" height="345" src="https://www.youtube.com/watch?v=XTgFtxHhCQ0">
+         </iframe>
    
   </div>
 </div>
+	
+	
 
 <div class="footer">
   <h2>Copyright 2022 © The Friendly Dead Co.</h2>
