--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 </div>
 
 <div class="navbar">
-  <a href="#" class="active">Home</a>
-  <a href="#">Meet The Artists</a>
-  <a href="#">Shop</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="meet.html">Meet The Artists</a>
+  <a href="shop.html">Shop</a>
 	<a href="ContactUs.html" class="right">Contact Us</a>
 
 </div>
