--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <h2>What's New ☺</h2>
     <p>See what's new in the shop!</p>
     <div class="fakeimg" style="width:300px;height:200px;">
+		<img src="Project Photos/us.JPG" width="304" height="304" alt=""/>
 		
 		<br>
 		<br>
@@ -151,10 +152,7 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		
 		
 		<h2>Sign Up For Updates</h2>
 
@@ -174,7 +172,8 @@
     <h1 class="title">COMING SOON...</h1>
     <br>
     
-    <div class="fakeimg" style="height:400px;">Image</div>
+    <img src="Project Photos/swirl.jpg" width="1200" height="650" alt=""/>
+    
     <p>The Friendly Dead Co. is excited to announce that come October all of your favorite designs will be availble to be printed on a vast verity of goods through our recent partnership with -insert print on demand service here-! </p>
 
 	  
